--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ut-csv",
   "version": "0.1.0",
+  "homepage": "https://zhengpengen.github.io/ut-csv",
   "private": true,
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
@@ -15,6 +16,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
