--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ut-csv",
   "version": "0.1.0",
-  "homepage": "https://zhengpengen.github.io/ut-csv",
+  "homepage": "https://zhengpengen.github.io/ut-course-schedule-visualizer/",
   "private": true,
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
