--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "private": true,
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
+    "@hello-pangea/dnd": "^16.6.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
