--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.8.0",
     "schedulejs": "^0.6.3",
     "web-vitals": "^2.1.4"
   },
